@@ -1,7 +1,9 @@
 CHANGES
 
- - Reenable and clean up cBot monitoring
+ - reenable and clean up cBot monitoring
  - try to avoid recursion in st::api::lims
+ - cope with no reference genome info in XML
+ - provisions for ml_warehouse driver
 
 release 80.6
  - change host for development tracking server
